--- a/04/index.html
+++ b/04/index.html
@@ -6,20 +6,20 @@
   <link rel="stylesheet" type="text/css" href="_framework.css">
   <link rel="stylesheet" type="text/css" href="global.css">
 </head>
-<body class="show_goal">
+<body class="show_goal see_through">
 
 <h1>Scrambled Eggs</h1>
 <p>Eggs are one of my favorite foods. Here is a recipe for deliciously rich scrambled eggs.</p>
 
-<h2>Ingredients</h2>
-<ul>
+<div class="sub_header"><h2>Ingredients</h2></div>
+<ul class="list">
   <li>2 eggs</li>
   <li>1tbs butter</li>
   <li>2tbs cream</li>
 </ul>
 
-<h2>Method</h2>
-<ol>
+<div class="sub_header"><h2>Method</h2></div>
+<ol class="numbered_list">
   <li>Melt butter in a frying pan over a medium heat</li>
   <li>Gently mix the eggs and cream in a bowl</li>
   <li>Once butter has melted add cream and eggs</li>
